refactor to modules

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "node ./bin/createKeys"
   },
   "dependencies": {
-    "request": "~2.74.0"
+    "request": "~2.74.0",
+    "edgegrid": "*",
+    "untildify": "*"
   }
 }
