--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "akamaiweb-kit",
-  "version": "0.0.1",
-  "private": true,
+  "name": "akamaiwebkit",
+  "version": "0.0.2",
   "description": "A wrapping development kit to interface common tasks with akamai's {OPEN} API.",
   "repository": "git+ssh://git@stash.akamai.com:7999/~colinb/akamaiweb-kit.git",
   "license": "Apache-2.0",
   "scripts": {
     "start": "node ./bin/createKeys",
-    "test":"./node_modules/.bin/mocha --reporter spec"
+    "test": "./node_modules/.bin/mocha --reporter spec"
   },
   "main": "./index.js",
   "files": [
