--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "md5": "^2.2.1",
     "mocha": "^3.2.0",
     "request": "^2.74.0",
+    "safe-buffer": "^5.1.1",
     "untildify": "*",
     "yargonaut": "^1.1.2",
     "yargs": "^10.0.3"
