--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mocha": "^3.2.0",
     "request": "^2.74.0",
     "safe-buffer": "^5.1.1",
+    "sywac": "^1.2.0",
     "untildify": "*",
     "yargonaut": "^1.1.2",
     "yargs": "^10.0.3"
