--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node bin/akamaiProperty",
-    "test": "./node_modules/.bin/mocha --reporter spec"
+    "test": "mocha test --timeout 0"
   },
   "main": "./index.js",
   "files": [
@@ -21,6 +21,7 @@
     "edgegrid": "*",
     "md5": "^2.2.1",
     "mocha": "^3.2.0",
+    "options": "0.0.6",
     "request": "^2.74.0",
     "safe-buffer": "^5.1.1",
     "sywac": "^1.2.0",
