--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "start": "node bin/akamaiProperty",
-    "test": "mocha test --timeout 0"
+    "test": "mocha test --timeout 0",
+    "build": "pkg bin/akamaiProperty --target node8-linux-x86,node8-linux-x64,node8-win-x86,node8-win-x64,node8-macos-x64 --output akamai-property-1.0.0"
   },
   "main": "./index.js",
   "files": [
@@ -21,7 +22,9 @@
     "edgegrid": "*",
     "md5": "^2.2.1",
     "mocha": "^3.2.0",
+    "nexe": "^2.0.0-rc.22",
     "options": "0.0.6",
+    "pkg": "^4.3.0-beta.5",
     "request": "^2.74.0",
     "safe-buffer": "^5.1.1",
     "sywac": "^1.2.0",
