--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "dependencies": {
     "chalk": "^2.3.0",
+    "child-process-promise": "^2.2.1",
+    "ini": "^1.3.5",
+    "inquirer": "^4.0.2",
+    "log4js": "^2.4.1",
     "md5": "^2.2.1",
     "merge": "^1.2.0",
     "mocha": "^3.2.0",
