Some laggardly modules

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "md5": "^2.2.1",
     "merge": "^1.2.0",
     "mocha": "^3.2.0",
+    "moment": "^2.20.1",
     "mz": "^2.7.0",
     "options": "0.0.6",
     "pkg": "^4.3.0-beta.5",
