--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "node": ">=7.0.0"
   },
   "scripts": {
+    "lint": "eslint --ignore-path .gitignore .",
     "start": "node bin/akamaiNetStorage",
+    "pretest": "npm run lint",
     "test": "mocha test --timeout 0",
     "build": "pkg bin/akamaiProperty --target node8-linux-x86,node8-linux-x64,node8-win-x86,node8-win-x64,node8-macos-x64 --output akamai-netstorage-1.0.0"
   },
